test/zinc_source/compile_errors/decorators/06_method_unsupported.zn
// expected-error: method decorator support is not implemented yet: 'read'
struct Box {
    value: i64

    @trace
    fn read() {
        return self.value
    }
}

fn main() {
    item = Box { value: 1 }
    print(item.read())
}
